# pytacs

./: .gitignore  Basic_Usage_of_pytacs.md  README  README.md  Test_on_synthetic_data_version1.1.1_allow_overlap.ipynb  Test_on_synthetic_data_version1.1.3_autopilot.ipynb  demo.html  demo.ipynb  get_import_versions.py  pyproject.toml  requirements.in  requirements.tree.txt  requirements.txt  test_nblobs_vs_probs.ipynb  test_spatial.py
data/demo/: demo.ipynb  pytacs
data/demo/h5ad/: snRNA_mouse_demo.h5ad  spRNA_mouse_demo.h5ad
data/demo/trained_clf/: clf_SVM_demo.dill
data/human_breast/trained_clf/: clf_SVM.dill  clf_SVM_subtypes_merged.dill
data/mouse_kidney/trained_clf/: clf_SVM_on_filtered_genes.dill  clf_cosine.dill  clf_cosine_fullgene.dill  clf_gauss_average.dill  clf_jaccard300.dill
pytacs/: __init__.py  __main__.py  classifier.py  data.py  mypy.ini  plot.py  recipe.py  spatial.py  spatial.py.bak  spatial.py.bak2  spatial.py.bak3  spatial.py.bak5  spatial.py.bak6  utils.py
