[project]
name = "pytacs"
version = "1.2.0"
description = "Pytacs: Python-implemented Topological Automatic Cell Segmentation"
authors = [
    {name = "Xindong Liu",email = "liuxindong@big.ac.cn"}
]
license = "GPL3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=1.26.4,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scanpy (>=1.10.4,<2.0.0)",
    "scikit-learn (>=1.5.2,<2.0.0)",
    "scipy (>=1.14.1,<2.0.0)",
    "dill (>=0.3.9,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
